exports[`test Signup renders 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation">
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}>
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}>
      <ul>
        <li>
          <a
            className="is-active is-current"
            href="/start"
            onClick={[Function]}>
            <span>
              Become a seller
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}>
            <span>
              Create your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}>
            <span>
              Business information
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/your-info"
            onClick={[Function]}>
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}>
            <span>
              Digital Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}>
            <span>
              Case Study
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}>
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}>
            <span>
              Review your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}>
            <span>
              Submit
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div>
      <h1>
        Become a seller
      </h1>
      <p>
        To join the Marketplace you need to:
      </p>
      <ul>
        <li>
          Tell us about your company
        </li>
        <li>
          Describe the digital services you\'ll offer and their rates.
        </li>
        <li>
          Provide evidence of your skills for assessment.
        </li>
        <li>
          Agree to the 
          <a
            href="#">
            terms in the deed
          </a>
          .
        </li>
      </ul>
      <p>
        Registering takes about 
        <b>
          30 mins
        </b>
        . You can save your application and continue it later.
      </p>
      <p>
        Before you start
      </p>
      <ul>
        <li>
          By completing this process you are signing the deed, so be sure the authorised person in the company completes this form.
        </li>
      </ul>
      <p>
        <a
          href="#"
          onClick={[Function]}
          role="button">
          Start Now 
        </a>
      </p>
    </div>
  </article>
</div>
`;

exports[`test Signup renders empty Your Info form 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation">
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}>
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}>
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}>
            <span>
              Become a seller
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}>
            <span>
              Create your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}>
            <span>
              Business information
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}>
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}>
            <span>
              Digital Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}>
            <span>
              Case Study
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}>
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}>
            <span>
              Review your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}>
            <span>
              Submit
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div
      className="layout">
      <header>
        <h1
          tabIndex="-1">
          Business details
        </h1>
      </header>
      <article
        role="main">
        <form
          action={undefined}
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="representative">
              Authorised Representative
            </label>
            <p
              className="hint"
              id="representative-hint">
              This person must be authorised to enter into contracts on behalf of the business.
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              id="representative"
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_name">
              Additional contact (optional)
            </label>
            <p
              className="hint"
              id="contact_name-hint">
              You can nominate someone else in your organisation to receive Marketplace communications, such as new opportunities.
            </p>
            <input
              aria-describedby="contact_name-hint"
              className=""
              id="contact_name"
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_phone"
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_email"
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="domains" />
          <input
            role="button"
            type="submit"
            value="Save and continue" />
        </form>
      </article>
    </div>
  </article>
</div>
`;

exports[`test Signup renders populated Your Info form 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation">
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}>
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}>
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}>
            <span>
              Become a seller
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}>
            <span>
              Create your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}>
            <span>
              Business information
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}>
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}>
            <span>
              Digital Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}>
            <span>
              Case Study
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}>
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}>
            <span>
              Review your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}>
            <span>
              Submit
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div
      className="layout">
      <header>
        <h1
          tabIndex="-1">
          Business details
        </h1>
      </header>
      <article
        role="main">
        <form
          action="/documents"
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="representative">
              Authorised Representative
            </label>
            <p
              className="hint"
              id="representative-hint">
              This person must be authorised to enter into contracts on behalf of the business.
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              id="representative"
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="Paul Acron" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="0292000000" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="email@domain.com" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_name">
              Additional contact (optional)
            </label>
            <p
              className="hint"
              id="contact_name-hint">
              You can nominate someone else in your organisation to receive Marketplace communications, such as new opportunities.
            </p>
            <input
              aria-describedby="contact_name-hint"
              className=""
              id="contact_name"
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_phone"
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_email"
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="domains" />
          <input
            role="button"
            type="submit"
            value="Save and continue" />
        </form>
      </article>
    </div>
  </article>
</div>
`;
